# Telega_controller

./: CHANGELOG.md  ETS_2D.json  ETS_sphere.json  Hill_calib.json  Improved_affine.json  README.md  YDX_Rover_V1_circle.csv  YDX_Rover_V1_circle2.csv  YDX_Rover_v1_Room_circle_SHIM.json  YDX_Rover_vStab_509_circle.csv  YDX_Rover_vStab_Chel_circle_RobotDriven.csv  YDX_rover_vClear_circle_IAMM.json  analitic_goemetry.json  app_settings.json  magical_opt.json  magical_papofotis.json  main.py  simple_hard_iron.json  stabilityTest.csv  test1.csv
app/: accelerometer_dataset.py  accelerometer_plugin_loader.py  accelerometer_tab.py  calibration_streams.py  coordinate_tab.py  dialogs.py  gui_app.py  gyroscope_dataset.py  gyroscope_tab.py  imu_dataset.py  magnetometer_analysis.py  magnetometer_analysis_window.py  magnetometer_dataset.py  manual_tab.py  (+8 more)
cpp_autopilot/: CMakeLists.txt  README.md
cpp_autopilot/include/telega_cpp_autopilot/: event_bus.hpp  event_payloads.hpp  runtime_graph.hpp  runtime_hooks.hpp  runtime_node_interfaces.hpp  runtime_protocol.hpp  runtime_server.hpp
cpp_autopilot/include/telega_cpp_autopilot/runtime_nodes/: autopilot_logic_stub.hpp  integrator_stub.hpp  logger_stub.hpp  mixer_filter_stub.hpp  tick_source_stub.hpp  trigger_stub.hpp  uart_rx_stub.hpp
cpp_autopilot/src/: event_bus.cpp  main.cpp  runtime_graph.cpp  runtime_hooks.cpp  runtime_protocol.cpp  runtime_server.cpp
cpp_autopilot/src/runtime_nodes/: autopilot_logic_stub.cpp  integrator_stub.cpp  logger_stub.cpp  mixer_filter_stub.cpp  tick_source_stub.cpp  trigger_stub.cpp  uart_rx_stub.cpp
(+246 files in other folders)
